[gd_scene load_steps=2 format=3 uid="uid://brrdayx4y2d5"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_e24si"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_e24si")

[node name="LevelLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 64.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "This is your level"

[node name="ScoreLabel" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 40
text = "This is your score"

[node name="KillsLabel" type="Label" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -79.0
offset_bottom = 26.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Murders : "

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -44.0
offset_right = 20.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Target Project the project"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MulLabel" type="Label" parent="."]
offset_left = 649.0
offset_top = 394.0
offset_right = 714.0
offset_bottom = 464.0
text = "x0"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -287.0
offset_top = -146.0
offset_right = 313.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="RetryButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -287.0
offset_top = -146.0
offset_right = 313.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Retry ?"

[node name="NextLevelButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -287.0
offset_top = -146.0
offset_right = 313.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Next"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="NextLevelButton" to="." method="_on_next_level_button_pressed"]
